project (fpc,cxx)

add_executable(fpc fpc.c)

enable_testing()
add_test(NAME add2 COMMAND fpc ../tests/add2.dat)
add_test(NAME add3 COMMAND fpc ../tests/add3.dat)
add_test(NAME add3b COMMAND fpc ../tests/add3b.dat)
add_test(NAME ex-4.1 COMMAND fpc ../tests/ex-4.1.dat)
add_test(NAME ex-4.1b COMMAND fpc ../tests/ex-4.1b.dat)
add_test(NAME factbig COMMAND fpc ../tests/factbig.dat)
add_test(NAME factorial COMMAND fpc ../tests/factorial.dat)
add_test(NAME firstn COMMAND fpc ../tests/firstn.dat)
add_test(NAME id COMMAND fpc ../tests/id.dat)
add_test(NAME integer COMMAND fpc ../tests/integer.dat)
add_test(NAME letargs COMMAND fpc ../tests/letargs.dat)
add_test(NAME letfact COMMAND fpc ../tests/letfact.dat)
add_test(NAME sharedint COMMAND fpc ../tests/sharedint.dat)
add_test(NAME show5 COMMAND fpc ../tests/show5.dat)
add_test(NAME show5 COMMAND fpc ../tests/show5main.dat)
add_test(NAME skkid COMMAND fpc ../tests/skkid.dat)
add_test(NAME sumsums COMMAND fpc ../tests/sumsums.dat)
